k8s-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-api
  labels:
    app: cms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cms-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cms
    spec:
      containers:
        - name: cms-api
          image: eu.gcr.io/josefs-cms/cms-api-prod:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: firebase-service-account
              mountPath: /var/run/secret/cloud.google.com
      volumes:
        - name: firebase-service-account
          secret:
            secretName: firebase-key
