k8s-config/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-api-service
  labels:
    app: cms-api
spec:
  type: NodePort
  selector:
    app: cms-api
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: cms-app-service
  labels:
    app: cms-app
spec:
  type: NodePort
  selector:
    app: cms-app
  ports:
    - port: 80
      targetPort: 80
