k8s-config/ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cms-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cms
  labels:
    app: cms
spec:
  backend:
    serviceName: cms-app-service
    servicePort: 80
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: cms-api-service
              servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cms-api-service
  labels:
    app: cms
spec:
  type: NodePort
  selector:
    app: cms
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cms-app-service
  labels:
    app: cms
spec:
  type: NodePort
  selector:
    app: cms
  ports:
    - port: 80
      targetPort: 80
